--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.28",
+    "expo-auth-session": "^5.5.2",
+    "expo-facebook": "^12.2.0",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-reanimated": "^3.15.0",
-    "tailwindcss": "^3.3.2",
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
