--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.28",
+    "expo-apple-authentication": "^6.4.2",
     "expo-auth-session": "^5.5.2",
     "expo-facebook": "^12.2.0",
     "expo-status-bar": "~1.12.1",
